
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/blue" />

        <CheckBox
            android:id="@+id/wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/wifi" />

        <CheckBox
            android:id="@+id/datos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datos" />

    </LinearLayout>
